--- a/public/css/main.less
+++ b/public/css/main.less
@@ -109,8 +109,8 @@ img {
 
 .components button,
 .userform button,
-.userform input[type=submit],
-.userform input[type=reset],
+input[type=submit],
+input[type=reset],
 .button {
     background: @buttonColor;
     border: 1px solid #867818;
@@ -123,6 +123,9 @@ img {
     color: black;
     font-weight: 100;
     display: inline-block;
+    text-shadow: unset;
+    font-size: 1.6rem;
+    font-family: "Open Sans", sans-serif;
     &:hover {
         text-shadow: none;
         border-color: @buttonColor;
