--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1029,6 +1029,43 @@ h2 {
 h3 {
   font-size: 2rem;
 }
+.loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 9999;
+  background-color: rgba(255, 255, 255, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(2px);
+}
+.loader .spinner {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+}
+.loader .spinner:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid #4e559a;
+  border-color: #4e559a transparent #4e559a transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 main a,
 .ui-widget .ui-widget-content a {
   color: #4e559a;
