--- a/public/css/main.less
+++ b/public/css/main.less
@@ -79,6 +79,45 @@ h3 {
     font-size: 2rem;
 }
 
+.loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 9999;
+    background-color: rgba(255, 255, 255, .4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(2px);
+    .spinner {
+        display: inline-block;
+        width: 80px;
+        height: 80px;
+        &:after {
+            content: " ";
+            display: block;
+            width: 64px;
+            height: 64px;
+            margin: 8px;
+            border-radius: 50%;
+            border: 6px solid @bgCol;
+            border-color: @bgCol transparent @bgCol transparent;
+            animation: lds-dual-ring 1.2s linear infinite;
+        }
+        @keyframes lds-dual-ring {
+            0% {
+            transform: rotate(0deg);
+            }
+            100% {
+            transform: rotate(360deg);
+            }
+        }
+    }
+
+}
+
 main a,
 .ui-widget .ui-widget-content a {
     color: @bgCol;
