--- a/public/css/form.less
+++ b/public/css/form.less
@@ -258,6 +258,7 @@ select.hidden-field {
             position: absolute;
             background-color: white;
             padding: 5px;
+            z-index: 10;
 
             .option {
                 width: 50%;
